# SparkOne-AI

./: .env.example  .env.production.example  .gitignore  .gitsecrets  .pre-commit-config.yaml  CHANGELOG.md  CONFIGURACAO_LOCAL.md  Dockerfile  IMPLEMENTACAO_COMPLETA.md  INSTRUCOES_RETOMADA.md  LEIA_PRIMEIRO.md  MASTER_PLAN_EXECUTION.md  Makefile  PLANO_JSON.json  PROXIMOS_PASSOS.md  README.md  README_EN.md  RELATORIO_TESTES_WEB.md  SECURITY.md  SESSAO_COMPLETA.md  SPEC.md  STATE_OF_PROJECT.md  create_sqlite_tables.py  debug_audio_elements.py  debug_csrf_issue.py  debug_form_submission.py  docker-compose.prod.yml  docker-compose.yml  env.py  fix_imports.py  fix_sparkone.sh  fix_src_imports.py  openapi.yaml  package-lock.json  pyproject.toml  requirements.txt  setup_local_db_fixed.ps1  sparkone_maintenance_plan.yaml  start_test_server.ps1  test_audio_playwright.py  (+7 more)
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: backup.yml  ci.yml  deploy-staging.yml  deploy.yml  security-scan.yml
_ops/: RELATORIO_AUDITORIA_COMPLETO.md
_ops/final_release/: CHANGELOG_SPARKONE_V1.md  FINAL_ACCEPTANCE_SPARKONE_V1.json  FINAL_RELEASE_REPORT_SPARKONE.md
_ops/phase9/: FINAL_ACCEPTANCE_PHASE9.json  PHASE9_VALIDATION.md
ai_context/: README.md  guidelines.md
ai_context/tasks/: evaluator.md  executor.md  planner.md
cleanup/: CLEANUP_PLAN.md  cleanup.list
config/: alembic.ini  env.example  production.env
config/docker/: .dockerignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml
data/: create_db.sql
docker/: SECRETS_TODO.md  entrypoint.sh
docs/: DEPLOY_PRODUCTION.md  INDEX.md  OPERATIONS.md  README.md  ROADMAP.md  api.md  contexto.md  decisoes.md  images  infra.md  observabilidade.md  performance.md
docs/adrs/: RF-015-proactivity-engine.md
docs/architecture/: README.md  infrastructure.md  overview.md
docs/configuration/: CONFIGURACAO_LLAMA.md  OBSERVABILITY.md  PROVEDORES_LLM.md  TESTE_LOCAL.md
docs/development/: development-guide.md  testing-strategy.md
docs/guides/: PYTHON_DOWNGRADE_GUIDE.md  configuration.md
docs/operations/: deployment-guide.md  operations-runbook.md
docs/reports/: FASE1_FINAL_REPORT.md  FINAL_STATUS.md  ORGANIZATION_COMPLETE.md  ORGANIZATION_SUMMARY.md  VALIDATION_PROGRESS_REPORT.md  VALIDATION_SESSION_SUMMARY.md  current-status.md
migrations/: env.py
migrations/versions/: 0001_create_channel_messages.py  0002_rename_metadata_to_extra_data.py  0004_add_is_admin.py  1bc0f6b6be41_add_worker_tables.py  20250127_add_user_storage_configs.py  2f0b0e7d1a10_convert_embeddings_to_pgvector.py  3a2b1c_add_external_id_to_channel_messages.py  9876c53d37d2_add_channel_to_conversation_messages.py
ops/: backup.sh  finalize_release.sh  restore.sh  smoke.sh  staging-compose.yml  verify_backup.sh
ops/alertmanager/: alertmanager  alertmanager.yml
ops/grafana/: dashboard-overview.json  dashboard-worker.json  grafana
ops/prometheus/: alerts.yml  prometheus  prometheus.yml
ops/scripts/: git-deploy-commands.sh  smoke-test.sh
ops/traefik/: README.md  traefik.yml
reports/: health_check_20251005_175512.json  health_check_20251005_175852.json  health_check_20251005_180342.json  health_check_20251005_180622.json  health_check_20251005_181343.json  organization_20251005_164026.md
scripts/: bootstrap_dev.py  setup_production.sh  smoketest.py
scripts/development/: init_database.py  init_db.py  run_local.ps1  setup_dev.py  setup_python311.ps1  start_server.ps1  validate_environment.ps1
scripts/maintenance/: cleanup.py  organize_project.py  project_health_check.py  project_health_check_updated.py
scripts/production/: smoketest.py
scripts/tools/: ingest_docs.py
services/: __init__.py
services/worker/: __init__.py  app.py  dlq.sql  event_monitor.py  notification_manager.py
sparkone-n8n-workflows/: CONFIGURACAO_SPARKONE.md  DEPLOYMENT_GUIDE.md  PROJECT_STATUS.md  QUICK_START.md  README_JARVIS_SYSTEM.md  docker-compose.yml  env.template  jarvis_agent_system.json  jarvis_ai_assistant.json  jarvis_voice_control.json  setup-sparkone.ps1  setup-sparkone.sh  sparkone_whatsapp_evolution.json  test-sparkone.py  workflow_data_processing.json  workflow_email_automation.json  workflow_exemplo.json
sparkone-n8n-workflows/.claude/: settings.local.json
src/: __init__.py
tests/: conftest.py  test_security.py
versions/: 0001_create_channel_messages.py  0002_rename_metadata_to_extra_data.py  0003_create_users_table.py  e5a8fecca705_add_message_embeddings_table.py
(+283 files in other folders)
