[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[project]
name = "sparkone"
version = "0.1.0"
description = "SparkOne assistant platform"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Marco Cardoso" }]
dependencies = [
    "fastapi>=0.115,<0.118",
    "uvicorn[standard]>=0.30,<0.38",
    "pydantic[email]>=2.8,<3",
    "pydantic-settings>=2.3,<3",
    "email-validator>=2.0.0",
    "httpx>=0.28,<0.29",
    "SQLAlchemy[asyncio]>=2.0.30,<2.1",
    "asyncpg>=0.29,<0.31",
    "alembic>=1.13,<1.17",
    "pgvector>=0.2.5",
    "redis>=5.0,<5.1",
    "structlog>=24.1,<25",
    "openai>=1.51,<2",
    "apscheduler>=3.10,<3.12",
    "jinja2>=3.1,<3.2",
    "prometheus-client>=0.20,<0.21",
    "psutil>=5.9,<6",
    "google-auth>=2.31,<3",
    "google-auth-oauthlib>=1.2,<2",
    "google-api-python-client>=2.134,<3",
    "python-multipart>=0.0.9",
    "opentelemetry-api>=1.25,<2",
    "opentelemetry-sdk>=1.25,<2",
    "opentelemetry-exporter-otlp>=1.25,<2",
    "opentelemetry-instrumentation-fastapi>=0.46b0,<1",
    "opentelemetry-instrumentation-httpx>=0.46b0,<1",
    "opentelemetry-instrumentation-asyncpg>=0.46b0,<1",
    "opentelemetry-instrumentation-redis>=0.46b0,<1",
    "pyotp>=2.9,<3",
    "qrcode[pil]>=7.4,<8",
    "passlib[bcrypt]>=1.7,<2",
    "python-jose[cryptography]>=3.3,<4"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<8.5",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-cov>=5.0,<6",
    "mypy>=1.10,<1.11",
    "ruff>=0.5.5,<0.6",
    "black>=24.4,<24.6",
    "pre-commit>=3.7,<3.8",
    "types-redis>=4.6.0.20240425"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "N", "C4", "TID"]
ignore = ["S101", "S311"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "-q --cov=src/app --cov-report=term-missing --cov-report=xml --cov-fail-under=60"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
mypy_path = "src"
exclude = [
    "venv/",
    "tests/fixtures/",
    "data/",
    ".temp/",
]
